examples/core/errors/type_errors/03_not_a_function.output.txt
error[E0103]: Cannot call non-function value
  ┌─ :0:0
1 │ // Type Error: Not a function
2 │ // Trying to apply a non-function value
3 │ 42(x)
  = note: This value has type #Int(Unit), which is not callable
  = note: Only function values (created with ->) can be called with parentheses
  = hint: Only functions can be called with parentheses
  = hint: Check that you're calling a function, not a value
  = hint: If you want a function, use a lambda: x -> expression
error[E0102]: Undefined variable
  ┌─ input:3:4
1 │ // Type Error: Not a function
2 │ // Trying to apply a non-function value
3 │ 42(x)
       ^
4 │ 
  = note: Variable at index 0 is not defined in this scope
  = note: Variables must be defined before they are used, typically in a let binding or lambda parameter
  = hint: Check variable name and scope
  = hint: Did you forget to define this variable?
  = hint: Check for typos in the variable name